Agentforce/force-app/main/default/objects/IT_Requirements__c/IT_Requirements__c.object-meta.xml
<CustomObject>
    <description>IT Requirements associated to an Opportunity</description>
    <label>IT Requirements</label>
    <nameField>
        <displayFormat>ITR-{00000}</displayFormat>
        <label>IT Requirements Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Requirements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>