Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/AvTech__c.field-meta.xml
<CustomField>
    <fullName>AvTech__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirms if AvTech is required</description>
    <label>AvTech</label>
    <type>Checkbox</type>
</CustomField>