Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/AvTech_Picklist__c.field-meta.xml
<CustomField>
    <fullName>AvTech_Picklist__c</fullName>
    <description>AVTech Software Required</description>
    <label>AvTech</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AvTech Passenger Assistance - Console</fullName>
                <color>#FFFFFF</color>
                <label>AvTech Passenger Assistance - Console</label>
            </value>
            <value>
                <fullName>AvTech Passenger Assistance - Mobile</fullName>
                <color>#FFFFFF</color>
                <label>AvTech Passenger Assistance - Mobile</label>
            </value>
            <value>
                <fullName>AvTech Shuttle - Console</fullName>
                <color>#FFFFFF</color>
                <label>AvTech Shuttle - Console</label>
            </value>
            <value>
                <fullName>AvTech Shuttle - Mobile</fullName>
                <color>#FFFFFF</color>
                <label>AvTech Shuttle - Mobile</label>
            </value>
            <value>
                <fullName>AvTech Turnaround - Console</fullName>
                <color>#FFFFFF</color>
                <label>AvTech Turnaround - Console</label>
            </value>
            <value>
                <fullName>AvTech Turnaround - Mobile</fullName>
                <color>#FFFFFF</color>
                <label>AvTech Turnaround - Mobile</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>