Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/Bespoke_IT_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Bespoke_IT_Requirements__c</fullName>
    <description>Bespoke IT Requirement Detail</description>
    <label>Bespoke IT Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>