Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/Bespoke_IT_Solution__c.field-meta.xml
<CustomField>
    <fullName>Bespoke_IT_Solution__c</fullName>
    <label>Bespoke IT Solution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>