Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/CAFM_Picklist__c.field-meta.xml
<CustomField>
    <fullName>CAFM_Picklist__c</fullName>
    <description>CAFM Software Required</description>
    <label>CAFM</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connect (Supplier Portal)</fullName>
                <color>#FFFFFF</color>
                <label>Connect (Supplier Portal)</label>
            </value>
            <value>
                <fullName>Concept Evolution (Core System)</fullName>
                <color>#FFFFFF</color>
                <label>Concept Evolution (Core System)</label>
            </value>
            <value>
                <fullName>Concept Reach (Client Portal, Concept)</fullName>
                <color>#FFFFFF</color>
                <label>Concept Reach (Client Portal, Concept)</label>
            </value>
            <value>
                <fullName>FSI Go (Mobile Working)</fullName>
                <color>#FFFFFF</color>
                <label>FSI Go (Mobile Working)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>