Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/CaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>CaseSafeID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>CaseSafeID</label>
    <type>Text</type>
</CustomField>