Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/Contract_Duration__c.field-meta.xml
<CustomField>
    <fullName>Contract_Duration__c</fullName>
    <formula>Opportunity__r.Contract_Term_String__c</formula>
    <label>Contract Duration</label>
    <type>Text</type>
</CustomField>