Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/Costing_Overview__c.field-meta.xml
<CustomField>
    <fullName>Costing_Overview__c</fullName>
    <description>Cost Detail</description>
    <label>Costing Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>