Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/Costings__c.field-meta.xml
<CustomField>
    <fullName>Costings__c</fullName>
    <description>Cost</description>
    <label>Costings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>