Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/Data_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Data_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Compliance</label>
    <type>Checkbox</type>
</CustomField>