Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/InfoSec__c.field-meta.xml
<CustomField>
    <fullName>InfoSec__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InfoSec</label>
    <type>Checkbox</type>
</CustomField>