Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/IOT_Text__c.field-meta.xml
<CustomField>
    <fullName>IOT_Text__c</fullName>
    <description>IOT Detail</description>
    <label>IOT</label>
    <type>TextArea</type>
</CustomField>