Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/IT_Equipment_Picklist__c.field-meta.xml
<CustomField>
    <fullName>IT_Equipment_Picklist__c</fullName>
    <description>IT Equipment Required</description>
    <label>IT Equipment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AD Account/MS365</fullName>
                <color>#FFFFFF</color>
                <label>AD Account/MS365</label>
            </value>
            <value>
                <fullName>Deskside Support</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
                <color>#FFFFFF</color>
                <label>Desktop</label>
            </value>
            <value>
                <fullName>Headsets</fullName>
                <color>#FFFFFF</color>
                <label>Headsets</label>
            </value>
            <value>
                <fullName>Laptop</fullName>
                <color>#FFFFFF</color>
                <label>Laptop</label>
            </value>
            <value>
                <fullName>MFD/Printer</fullName>
                <color>#FFFFFF</color>
                <label>MFD/Printer</label>
            </value>
            <value>
                <fullName>Mobile Phone</fullName>
                <color>#FFFFFF</color>
                <label>Mobile Phone</label>
            </value>
            <value>
                <fullName>Monitor</fullName>
                <color>#FFFFFF</color>
                <label>Monitor</label>
            </value>
            <value>
                <fullName>Printer/Desktop</fullName>
                <color>#FFFFFF</color>
                <label>Printer/Desktop</label>
            </value>
            <value>
                <fullName>SIM</fullName>
                <color>#FFFFFF</color>
                <label>SIM</label>
            </value>
            <value>
                <fullName>Tablet</fullName>
                <color>#FFFFFF</color>
                <label>Tablet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>