Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/IT_Equipment_Summary__c.field-meta.xml
<CustomField>
    <fullName>IT_Equipment_Summary__c</fullName>
    <description>Text area to provide details on IT Equipment</description>
    <label>IT Equipment Summary</label>
    <type>TextArea</type>
</CustomField>