Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/IT_Equiptment__c.field-meta.xml
<CustomField>
    <fullName>IT_Equiptment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IT Equiptment</label>
    <type>Checkbox</type>
</CustomField>