Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/Mobilisation_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Mobilisation_Requirements__c</fullName>
    <description>Requirements for Mobilisation</description>
    <label>Mobilisation Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>