Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/Mobilisation_Support__c.field-meta.xml
<CustomField>
    <fullName>Mobilisation_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobilisation Support</label>
    <type>Checkbox</type>
</CustomField>