Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/Mobilisation_Supported_By__c.field-meta.xml
<CustomField>
    <fullName>Mobilisation_Supported_By__c</fullName>
    <description>Individual Supporting Mobilisation</description>
    <label>Mobilisation Supported By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>