Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/Network_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Network_Picklist__c</fullName>
    <description>Network type</description>
    <label>Network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(FTTC) Fiber cabinet</fullName>
                <color>#FFFFFF</color>
                <label>(FTTC) Fiber cabinet</label>
            </value>
            <value>
                <fullName>ADSL</fullName>
                <color>#FFFFFF</color>
                <label>ADSL</label>
            </value>
            <value>
                <fullName>Ethernet</fullName>
                <color>#FFFFFF</color>
                <label>Ethernet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>