Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/Network_Summary__c.field-meta.xml
<CustomField>
    <fullName>Network_Summary__c</fullName>
    <description>Provides an area to provide further detail on the Network requirements</description>
    <label>Network Summary</label>
    <type>TextArea</type>
</CustomField>