Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>IT Requirements</relationshipLabel>
    <relationshipName>IT_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>