Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/Opportunity_Closed__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Closed__c</fullName>
    <formula>Opportunity__r.IsClosed</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Closed</label>
    <type>Checkbox</type>
</CustomField>