Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/Opportunity_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Contract_Start_Date__c</fullName>
    <formula>Opportunity__r.Contract_Start_Date__c</formula>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>