Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/Opportunity_Owner_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Business_Unit__c</fullName>
    <formula>Opportunity__r.Owner_Business_Unit_Formula__c</formula>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>