Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/Other_Systems__c.field-meta.xml
<CustomField>
    <fullName>Other_Systems__c</fullName>
    <label>Other Systems</label>
    <length>255</length>
    <type>Text</type>
</CustomField>