Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/RFP_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>RFP_Submission_Date__c</fullName>
    <formula>Opportunity__r.RFP_Submission_Date__c</formula>
    <label>RFP Submission Date</label>
    <type>Date</type>
</CustomField>