Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/Service_Summary__c.field-meta.xml
<CustomField>
    <fullName>Service_Summary__c</fullName>
    <formula>Opportunity__r.Service_Summary_Text__c</formula>
    <label>Service Summary</label>
    <type>Text</type>
</CustomField>