Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/Timegate__c.field-meta.xml
<CustomField>
    <fullName>Timegate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Timegate</label>
    <type>Checkbox</type>
</CustomField>