Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/Timegate_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Timegate_Picklist__c</fullName>
    <description>Timegate Software</description>
    <label>Timegate</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee App</fullName>
                <color>#FFFFFF</color>
                <label>Employee App</label>
            </value>
            <value>
                <fullName>Employee Portal</fullName>
                <color>#FFFFFF</color>
                <label>Employee Portal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>