Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/Tork_Vision_Cleaning_Text__c.field-meta.xml
<CustomField>
    <fullName>Tork_Vision_Cleaning_Text__c</fullName>
    <label>Tork Vision Cleaning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>