Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/Trackforce_Valiant__c.field-meta.xml
<CustomField>
    <fullName>Trackforce_Valiant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trackforce Valiant Required</description>
    <label>Trackforce Valiant</label>
    <type>Checkbox</type>
</CustomField>