Agentforce/force-app/main/default/objects/IT_Requirements__c/fields/Trackforce_Valiant_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Trackforce_Valiant_Picklist__c</fullName>
    <description>Trackforce Software</description>
    <label>Trackforce Valiant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Post (Desktop Application)</fullName>
                <color>#FFFFFF</color>
                <label>Post (Desktop Application)</label>
            </value>
            <value>
                <fullName>Trackforce mPost (Mobile Application)</fullName>
                <color>#FFFFFF</color>
                <label>Trackforce mPost (Mobile Application)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>