Agentforce/force-app/main/default/objects/IT_Requirements__c/listViews/My_IT_Requirements.listView-meta.xml
<ListView>
    <fullName>My_IT_Requirements</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My IT Requirements</label>
</ListView>